<resources>
    <string name="app_name">CepFly</string>
    <string name="welcome">Welcome to CepFly</string>
    <string name="start_mode">Start!</string>
    <string name="menu_principal"><u>Main Menu</u></string>
    <string name="admin_mode">Admin</string>
    <string name="user_mode">User</string>
    <string name="client_menu"><u>Client Options</u></string>
    <string name="exit_mode">Exit</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="flight_info">Flight info</string>
    <string name="new_employee">New employee</string>
    <string name="employee_info">Employee info</string>
    <string name="ticket_sell"><u>Buy tickets</u></string>
    <string name="info"><u>Info</u></string>
    <string name="set_flight"><u>Set flight</u></string>
    <string name="add_employee"><u>Add Employee</u></string>
</resources>
